--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,2 @@
-[package]
-name = "insta-bug"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-insta = "1.19.0"
+[workspace]
+members = ["packages/insta-bug"]
